# cracking-the-coding-interview

./: .gitignore  .pre-commit-config.yaml  README.md  meson.build  pyproject.toml
.github/workflows/: ci.yaml
legacy/: README.md  meson.build
src/01-arrays-and-strings/: 01-is-unique.cpp  04-palindrome-permutation.cpp  06-string-compression.cpp  08-zero-matrix.cpp  09-string-rotation.cpp
src/02-linked-lists/: 01-other-name.cpp  03-delete-middle-node.cpp  04-partition.cpp  07-intersection.cpp  08-loop-detection.cpp  _singly-linked.cpp
src/03-stacks-and-queues/: 01-fib-with-test.cpp  01-three-in-one.cpp  06-animal-shelter.cpp  99-stack-and-queue-impl.cpp
src/chapter_01/: q01_is_unique.py  q02_check_permutation.py  q03_urlify.py  q04_palindrome_permutation.py  q05_one_away.py  q06_string_compression.py  q07_rotate_matrix.py  q08_zero_matrix.py  q09_string_rotation.py
src/chapter_02/: linkedlist.py  q01_remove_dups.py  q02_kth_to_last.py  q03_delete_middle_node.py  q04_partition.py  q05_sum_lists.py  q06_palindrome.py  q07_intersection.py  q08_loop_detection.py
src/chapter_03/: q01_three_in_one.py  q02_stack_min.py  q03_stack_of_plates.py  q04_queue_via_stacks.py  q05_sort_stack.py  q06_animal_shelter.py
src/chapter_04/: graphs.py  q01_route_between_nodes.py  q02_minimal_tree.py  q03_list_of_depths.py  q04_check_balanced.py  q05_validate_bst.py  q06_successor.py  q07_build_order.py  q08_first_common_ancestor.py  q09_bst_sequence.py  q10_check_subtree.py  q11_random_node.py  q12_paths_with_sum.py
src/chapter_05/: q01_insertion.py  (+7 more)
subprojects/: .gitignore
(+32 files in other folders)
